--- a/tenisNuevo.html
+++ b/tenisNuevo.html
@@ -71,7 +71,7 @@
         </label>
       </p>
     <div class="herramientas">
-        <a href="tenis.html">
+        <a href="superheroes.html">
           Cancelar</a>
         <button type="submit">
           Guardar
