--- a/superheroesNuevo.html
+++ b/superheroesNuevo.html
@@ -80,7 +80,7 @@
     <mi-footer></mi-footer>
   </form>
   <script type="module"
-    src="js/CtrlTenisNuevo.js">
+    src="js/CtrlSuperheroesNuevo.js">
     </script>
 </body>
 </html>
