--- a/superheroe.html
+++ b/superheroe.html
@@ -93,7 +93,7 @@
     <mi-footer></mi-footer>
   </form>
   <script type="module"
-    src="js/CtrlTeni.js">
+    src="js/CtrlSuperheroe.js">
     </script>
 </body>
 </html>
