--- a/superheroes.html
+++ b/superheroes.html
@@ -37,7 +37,7 @@
 <body background="fondochat.jpg">
   <mi-nav></mi-nav>
   <header>
-    <h1>Tenis favoritos</h1>
+    <h1>Super héroes favoritos</h1>
     <div class="herramientas">
       <a href="superheroesNuevo.html">
         Agregar…</a>
