--- a/superheroe.html
+++ b/superheroe.html
@@ -39,11 +39,11 @@
     <mi-nav></mi-nav>
     <header>
       <h1>
-        Tenis favorito
+        Superhéroe favorito
       </h1>
     </header>
     <figure id="figure">
-      <img alt="Falta el Avatar">
+      <img alt="Falta la imagen de tu superhéroe favorito">
     </figure>
     <p>
       <label>
@@ -53,35 +53,25 @@
           accept=".png,.jpg,.jpeg,.gif">
       </label>
     </p>
-    <!--
-      Maneja una asociación a uno.
-    -->
+    
     <p>
       <label>
-        Marca
-        <input name="marca"
+        Nombre
+        <input name="nombre"
           type="text" required
           value="Cargando…">
       </label>
     </p>
     <p>
       <label>
-        Modelo
-        <input name="modelo"
-          type="text" required
-          value="Cargando…">
-      </label>
-    </p>
-    <p>
-      <label>
-        Link de compra
-        <input name="lkcompra"
+        Super poder
+        <input name="superpoder"
           type="text" required
           value="Cargando…">
       </label>
     </p>
     <div class="herramientas">
-      <a href="tenis.html">
+      <a href="superheroes.html">
         Cancelar</a>
         <button name="eliminar"
         type="button">
