--- a/usuarioNuevo.html
+++ b/usuarioNuevo.html
@@ -61,9 +61,9 @@
     -->
     <p>
       <label>
-        Tenis favoritos
+        Superhéroe favorito
         <select
-          name="tenisId">
+          name="superId">
           <option>
             Cargando…
           </option>
