--- a/superheroesNuevo.html
+++ b/superheroesNuevo.html
@@ -51,25 +51,19 @@
     </p>
     <p>
         <label>
-          Marca
-          <input name="marca"
+          Nombre del superhéroe
+          <input name="nombre"
             type="text" required>
         </label>
       </p>
       <p>
         <label>
-          Modelo
-          <input name="modelo"
+          Superpoder
+          <input name="superpoder"
             type="text" required>
         </label>
       </p>
-      <p>
-        <label>
-          Link de compra
-          <input name="lkcompra"
-            type="text" required>
-        </label>
-      </p>
+   
     <div class="herramientas">
         <a href="superheroes.html">
           Cancelar</a>
