--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
   <link rel="stylesheet"
     href="css/estilos.css">
 </head>
-<body background="fondochat.jpg">
+<body background="imgindex.jpg">
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
       <h1>Bienvenido SneakerHead</h1>
     </header>
     <figure>
-      <img id="avatar" src=""
+      <img id="avatar" src="imgindex.jpg"
         alt="Avatar"
         width="130"
         height="130"
