--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     content="width=device-width,
        initial-scale=1.0">
   <title>Sesión</title>
-  <link rel="shortcut icon" href="cv logo.jpg">
+  <link rel="shortcut icon" href="logo.jpg">
   <!--
     Carga el núcleo de Firebase
     JS SDK
