--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h1>Bienvenido SneakerHead</h1>
     </header>
     <figure>
-      <img id="avatar" src="imgindex.jpg"
+      <img id="avatar" src="fondochat.jpg"
         alt="Avatar"
         width="130"
         height="130"
