--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
       <h1>Bienvenido SneakerHead</h1>
     </header>
     <figure>
-      <img id="avatar" src="fondochat.jpg"
+      <img id="avatar" src=""
         alt="Avatar"
         width="130"
         height="130"
         align="left">
 
-          <img src="logoo.jpg" 
+          <img src="fondochat.jpg" 
           width="170"
           height="170"
           align="right">
