--- a/chat.html
+++ b/chat.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet"
     href="css/estilos.css">
 </head>
-<body background="imgindex.jpg">
+<body background="fondochat.jpg">
   <mi-nav></mi-nav>
   <form name="forma">
     <header>
