--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <link rel="stylesheet"
     href="css/estilos.css">
 </head>
-<body background="imgindex.jpg">
+<body background="">
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
@@ -60,7 +60,7 @@
         height="130"
         align="left">
 
-          <img src="fondochat.jpg" 
+          <img src="imgindex.jpg" 
           width="170"
           height="170"
           align="right">
