--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         height="130"
         align="left">
 
-          <img src="imgindex.jpg" 
+          <img src="logo.jpg" 
           width="170"
           height="170"
           align="right">
