--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <link rel="stylesheet"
     href="css/estilos.css">
 </head>
-<body background="">
+<body bgcolor="#dddddf">
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
