--- a/superheroesNuevo.html
+++ b/superheroesNuevo.html
@@ -38,7 +38,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Tenis Nuevo</h1>
+      <h1>Superhéroe nuevo</h1>
       
     </header>
     <p>
