--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Bienvenido SneakerHead</h1>
+      <h1>Hola fan de los superhéroes</h1>
     </header>
     <figure>
       <img id="avatar" src=""
