--- a/index.html
+++ b/index.html
@@ -58,12 +58,7 @@
         alt="Avatar"
         width="130"
         height="130"
-        align="left">
-
-          <img src="logo.jpg" 
-          width="170"
-          height="170"
-          align="right">
+        align="center">
     </figure>
     <br><br><br><br><br><br><br>
     <p>
