--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
     <header>
       <h1>Hola fan de los superhéroes</h1>
     </header>
-    <figure>
+    <figure align="center">
       <img id="avatar" src=""
         alt="Avatar"
         width="130"
-        height="130"
-        align="center">
+        height="130">
     </figure>
     <br><br><br><br><br><br><br>
     <p>
