--- a/superheroesNuevo.html
+++ b/superheroesNuevo.html
@@ -5,8 +5,8 @@
   <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-  <title>Usuario Nuevo</title>
-  <link rel="shortcut icon" href="logo.jpg">
+  <title>Superhéroe Nuevo</title>
+  <link rel="shortcut icon" href="cv logo.jpg">
 
   <script
     src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js">
@@ -38,7 +38,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Superhéroe nuevo</h1>
+      <h1>Tenis Nuevo</h1>
       
     </header>
     <p>
@@ -51,21 +51,20 @@
     </p>
     <p>
         <label>
-          Nombre del superhéroe
+          Marca
           <input name="nombre"
             type="text" required>
         </label>
       </p>
       <p>
         <label>
-          Superpoder
+          Modelo
           <input name="superpoder"
             type="text" required>
         </label>
       </p>
-   
     <div class="herramientas">
-        <a href="superheroes.html">
+        <a href="tenis.html">
           Cancelar</a>
         <button type="submit">
           Guardar
