--- a/superheroes.html
+++ b/superheroes.html
@@ -39,7 +39,7 @@
   <header>
     <h1>Super héroes favoritos</h1>
     <div class="herramientas">
-      <a href="superheroe.html">
+      <a href="superNuevo.html">
         Agregar…</a>
     </div>
   </header>
