--- a/superNuevo.html
+++ b/superNuevo.html
@@ -5,8 +5,8 @@
   <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-  <title>Usuario Nuevo</title>
-  <link rel="shortcut icon" href="cv logo.jpg">
+  <title>Superhéroe Nuevo</title>
+  <link rel="shortcut icon" href="logo.jpg">
 
   <script
     src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js">
@@ -38,7 +38,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Tenis Nuevo</h1>
+      <h1>Superhéroe Nuevo</h1>
       
     </header>
     <p>
@@ -52,26 +52,19 @@
     <p>
         <label>
           Marca
-          <input name="marca"
+          <input name="nombre"
             type="text" required>
         </label>
       </p>
       <p>
         <label>
           Modelo
-          <input name="modelo"
-            type="text" required>
-        </label>
-      </p>
-      <p>
-        <label>
-          Link de compra
-          <input name="lkcompra"
+          <input name="superpoder"
             type="text" required>
         </label>
       </p>
     <div class="herramientas">
-        <a href="tenis.html">
+        <a href="superheroes.html">
           Cancelar</a>
         <button type="submit">
           Guardar
