--- a/superheroes.html
+++ b/superheroes.html
@@ -39,7 +39,7 @@
   <header>
     <h1>Super héroes favoritos</h1>
     <div class="herramientas">
-      <a href="superNuevo.html">
+      <a href="superheroesNuevo.html">
         Agregar…</a>
     </div>
   </header>
@@ -51,7 +51,7 @@
   </ul>
   <mi-footer></mi-footer>
   <script type="module"
-    src="js/CtrlSuperheroes.js">
+    src="js/CtrlSuperheroesNuevo.js">
     </script>
 </body>
 </html>
