--- a/superheroes.html
+++ b/superheroes.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-  <title>Usuarios</title>
+  <title>Superhéroes</title>
     <link rel="shortcut icon" href="logo.jpg">
   <script
     src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js">
