--- a/superheroe.html
+++ b/superheroe.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-  <title>Usuario</title>
+  <title>Superhéroe</title>
   <link rel="shortcut icon" href="logo.jpg">
 
   <script
