--- a/superheroes.html
+++ b/superheroes.html
@@ -51,7 +51,7 @@
   </ul>
   <mi-footer></mi-footer>
   <script type="module"
-    src="js/CtrlSuperheroesNuevo.js">
+    src="js/CtrlSuperheroes.js">
     </script>
 </body>
 </html>
