--- a/superheroesNuevo.html
+++ b/superheroesNuevo.html
@@ -6,7 +6,7 @@
     content="width=device-width,
        initial-scale=1.0">
   <title>Superhéroe Nuevo</title>
-  <link rel="shortcut icon" href="cv logo.jpg">
+  <link rel="shortcut icon" href="logo.jpg">
 
   <script
     src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js">
@@ -51,14 +51,14 @@
     </p>
     <p>
         <label>
-          Marca
+          Nombre
           <input name="nombre"
             type="text" required>
         </label>
       </p>
       <p>
         <label>
-          Modelo
+          Superpoder
           <input name="superpoder"
             type="text" required>
         </label>
