--- a/usuario.html
+++ b/usuario.html
@@ -62,9 +62,9 @@
     -->
     <p>
       <label>
-        Tenis favoritos
+        Superhéroe favorito
         <select
-          name="tenisId">
+          name="superId">
           <option>
             Cargando…
           </option>
@@ -76,7 +76,7 @@
       muchos.
     -->
     <fieldset>
-      <legend>Roles</legend>
+      Roles
       <ul id="listaRoles"
         class="checks">
         <li>
