--- a/superheroesNuevo.html
+++ b/superheroesNuevo.html
@@ -40,7 +40,7 @@
     <header>
       <h1>Tenis Nuevo</h1>
       <div class="herramientas">
-        <a href="tenis.html">
+        <a href="superheroes.html">
           Cancelar</a>
         <button type="submit">
           Guardar
