--- a/usuarioNuevo.html
+++ b/usuarioNuevo.html
@@ -81,7 +81,7 @@
       muchos.
     -->
     <fieldset>
-      <legend>Roles</legend>
+     Roles
       <ul id="listaRoles"
         class="checks">
         <li>
